# SmartFarm-API

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUTHENTICATION.md  BACKEND_README.md  COMPLETE_SETUP.md  DATAHAUL_MVP.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  FIREBASE_SETUP.md  FRONTEND_INTEGRATION.md  MANIFEST.in  Makefile  Procfile  README.md  __init__.py  api-tester.html  build.sh  check_and_run.py  check_config.py  check_directory.py  check_django.py  check_django_env.py  check_django_setup.py  check_env.bat  check_env.py  check_env_simple.py  check_environment.py  check_install.py  check_installed_apps.py  check_key.py  check_missing_deps.py  check_package_structure.py  check_project_structure.py  check_python.bat  check_python_env.py  check_service_account.py  check_test_env.py  (+163 more)
%TEMP%smartfarm-venv/: pyvenv.cfg
.sf-venv/: pyvenv.cfg
authentication/: models.py  urls.py  views.py
backend/: AUTHENTICATION.md  Dockerfile  FIREBASE_SETUP.md  check_django.py  check_django_env.py  check_django_test.py  check_env.ps1  check_env.py  check_environment.py  check_python.py  check_syntax.py  create_test_user.py  debug_env.py  debug_test.py  manage.py  minimal_test.py  pytest.ini  render.yaml  requirements-django.txt  requirements.txt  run_farmer_tests.py  run_farmers_test.py  run_farmers_tests.py  run_farmers_tests_fixed.py  run_test.bat  run_test.py  run_tests.py  run_tests_directly.py  runtests.py  setup.py  simple_test.py  start.sh  test_django.py  test_django_settings.py  test_env.py  test_output.py  test_output.txt  test_results.html  (+4 more)
(+393 files in other folders)
